@@ -1,3 +1,8 @@
+2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/operators.R (graph.difference, "%m%") : added
+	* interfaces/R/src/rinterface.c (R_igraph_difference) : added
+
 2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/operators.R 
